project: jdk11+ compatibility (#1829)